--- a/frontend/src/Styles/Pages/MainPage/_mainPage.module.scss
+++ b/frontend/src/Styles/Pages/MainPage/_mainPage.module.scss
@@ -66,7 +66,7 @@
             width: 625px;
             height: 569px;
 
-            background-color: var(--form-background-color);
+            background-color: var(--card-background-color);
             box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.1);
             border-radius: 15px;
             overflow: hidden;
@@ -174,7 +174,7 @@
               width: 650px;
               height: 48%;
 
-              background-color: var(--form-background-color);
+              background-color: var(--card-background-color);
               box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.1);
               border-radius: 15px;
 
