--- a/frontend/src/Styles/_variable.module.scss
+++ b/frontend/src/Styles/_variable.module.scss
@@ -2,7 +2,7 @@
 
 :root {
   --background-color: #fff;
-  --form-background-color: #fff;
+  --card-background-color: #fff;
   --bubble-color: #eee;
 
   --shadow-color: rgba(0, 0, 0, 0.1);
@@ -44,7 +44,7 @@
 
 .dark {
   --background-color: #171717;
-  --form-background-color: #242424;
+  --card-background-color: #242424;
   --bubble-color: #444;
 
   --shadow-color: rgba(0, 0, 0, 0.1);
